--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Islam Hafez | Home</title>
     <!-- favicon -->
-    <link rel="icon" type="image/png" sizes="32*32" href="/images/icon (2).png">
+    <link rel="icon" type="image/png" sizes="32*32" href="./images/icon (2).png">
     <!-- remixicon -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <!-- swiperJS -->
@@ -238,6 +238,98 @@
         </div>
     </section>
     <!-- End features section -->
+     <!-- Start Quik Read Section -->
+    <setion class="quick-read section">
+        <div class="container">
+            <h2 class="title section-title" data-name="Quick-Read">Quick-Read</h2>
+            <div class="swiper">
+                <div class="swiper-wrapper">
+
+                    <!-- Quick1 -->
+                    <a href="#" class="article swiper-slide">
+                        <img src="./images/read1.jpg" alt="" class="article-image">
+                        <div class="article-data-container">
+                            <div class="article-data">
+                                <span>Dec 5 th</span>
+                                <span class = "article-data-spacer"></span>
+                                <span>8 min red</span>
+                            </div>
+                            <h3 class="title title-article">Sample Article title</h3>
+                        </div>
+                    </a>
+
+                    <!-- Quick2 -->
+                    <a href="#" class="article swiper-slide">
+                        <img src="./images/read2.jpg" alt="" class="article-image">
+                        <div class="article-data-container">
+                            <div class="article-data">
+                                <span>Dec 5 th</span>
+                                <span class = "article-data-spacer"></span>
+                                <span>8 min red</span>
+                            </div>
+                            <h3 class="title title-article">Sample Article title</h3>
+                        </div>
+                    </a>
+
+                    <!-- Quick3 -->
+                    <a href="#" class="article swiper-slide">
+                        <img src="./images/read3.jpg" alt="" class="article-image">
+                        <div class="article-data-container">
+                            <div class="article-data">
+                                <span>Dec 5 th</span>
+                                <span class = "article-data-spacer"></span>
+                                <span>8 min red</span>
+                            </div>
+                            <h3 class="title title-article">Sample Article title</h3>
+                        </div>
+                    </a>
+
+                    <!-- Quick4 -->
+                    <a href="#" class="article swiper-slide">
+                        <img src="./images/read4.jpg" alt="" class="article-image">
+                        <div class="article-data-container">
+                            <div class="article-data">
+                                <span>Dec 5 th</span>
+                                <span class = "article-data-spacer"></span>
+                                <span>8 min red</span>
+                            </div>
+                            <h3 class="title title-article">Sample Article title</h3>
+                        </div>
+                    </a>
+
+                    <!-- Quick5 -->
+                    <a href="#" class="article swiper-slide">
+                        <img src="./images/read5.jpg" alt="" class="article-image">
+                        <div class="article-data-container">
+                            <div class="article-data">
+                                <span>Dec 5 th</span>
+                                <span class = "article-data-spacer"></span>
+                                <span>8 min red</span>
+                            </div>
+                            <h3 class="title title-article">Sample Article title</h3>
+                        </div>
+                    </a>
+
+                    <!-- Quick6 -->
+                    <a href="#" class="article swiper-slide">
+                        <img src="./images/read6.jpg" alt="" class="article-image">
+                        <div class="article-data-container">
+                            <div class="article-data">
+                                <span>Dec 5 th</span>
+                                <span class = "article-data-spacer"></span>
+                                <span>8 min red</span>
+                            </div>
+                            <h3 class="title title-article">Sample Article title</h3>
+                        </div>
+                    </a>
+                </div>
+                <div class="swiper-button-prev swiper-controls"></div>
+                <div class="swiper-button-next swiper-controls"></div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+    </setion>
+    <!-- End Quik Read Section -->
 
     <!-- Start Older Posts Section  -->
     <section class="older-posts section">
